WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
254110
Hover state lost when moving from input[type=checkbox] to parent label
https://bugs.webkit.org/show_bug.cgi?id=254110
Summary
Hover state lost when moving from input[type=checkbox] to parent label
Ahmad Saleem
Reported
2023-03-18 04:47:17 PDT
Hi Team, While going through Blink's commit, I came across following bug, which is still happening in Safari Technology Preview 165: JSFiddle from Chrome Monorail:
https://jsfiddle.net/MT9kL/
Blink Commit:
https://src.chromium.org/viewvc/blink?view=revision&revision=195446
Just wanted to raise so we can fix it. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-25 04:48:15 PDT
<
rdar://problem/107220591
>
Ahmad Saleem
Comment 2
2024-12-25 00:28:57 PST
SVN is gone -
https://github.com/chromium/chromium/commit/043555737a6776d34496c8b2a618b54ad083829c
Ahmad Saleem
Comment 3
2024-12-25 00:31:25 PST
https://github.com/chromium/chromium/commit/90f27accb21eafe9e237b454905bf6c5a590e0ab
Ahmad Saleem
Comment 4
2024-12-25 00:44:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38369
EWS
Comment 5
2025-01-05 13:43:13 PST
Committed
288449@main
(13c06357a7d5): <
https://commits.webkit.org/288449@main
> Reviewed commits have been landed. Closing PR #38369 and removing active labels.
WebKit Commit Bot
Comment 6
2025-02-13 18:04:09 PST
Re-opened since this is blocked by
bug 287683
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug