Hover state lost when moving from input[type=checkbox] to parent label and back again https://bugs.webkit.org/show_bug.cgi?id=254110 rdar://107220591

Reviewed by Darin Adler.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Merge: https://github.com/chromium/chromium/commit/90f27accb21eafe9e237b454905bf6c5a590e0ab

Before this patch if the commonAncestor of newHovered and oldHovered
node is newHovered node then setHover gets ignored for newHovered node.

We are not merging test because it is already imported in past and passing somehow,
although I manually tested the new behavior on `https://jsfiddle.net/MT9kL/` and confirm
that our behavior now matches with other browsers on above JSFiddle.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::updateHoverActiveState):
* Source/WebCore/html/HTMLLabelElement.cpp:
(WebCore::HTMLLabelElement::setActive):
(WebCore::HTMLLabelElement::setHovered):

Canonical link: https://commits.webkit.org/288449@main